--- a/Ceramica/src/sass/components/vars.scss
+++ b/Ceramica/src/sass/components/vars.scss
@@ -4,4 +4,4 @@ $color-focus-red: #AA182C;
 $color-footer-background: #6A737A;
 $color-button-active: #6B97BB;
 $color-dots: #F9F9FA;
-// $color-background-milky: #F9F9FA;
+$form-border:  #CFDAE3;
