--- a/Ceramica/public/css/style.css
+++ b/Ceramica/public/css/style.css
@@ -586,6 +586,22 @@ body {
   min-width: 0;
 }
 
+.title {
+  font-family: "Gotham Pro";
+  font-size: 44px;
+  line-height: 1.3;
+  font-weight: normal;
+  color: #40474E;
+}
+
+.meaning {
+  font-family: "Gotham Pro";
+  font-size: 18px;
+  line-height: 1.4;
+  color: #40474E;
+  font-weight: 300;
+}
+
 .sense__navigation {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -600,19 +616,11 @@ body {
 }
 
 .sense__header {
-  font-size: 44px;
-  line-height: 1.3;
-  font-weight: normal;
-  color: #40474E;
   margin-bottom: 40px;
 }
 
 .sense__text {
   max-width: 460px;
-  font-size: 18px;
-  line-height: 1.4;
-  color: #40474E;
-  font-weight: 300;
 }
 
 .sense__text > p:not(:last-child) {
@@ -854,6 +862,163 @@ body {
 
 .tile__element {
   background-color: #FFFFFF;
+}
+
+.feedback {
+  padding: 120px;
+}
+
+.feedback__wrapper {
+  height: 863px;
+  background: url("../img/questions/questions_1.jpg") no-repeat;
+  background-position: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.feedback__form {
+  margin-right: 65px;
+}
+
+.form {
+  padding: 75px 154px 104px 112px;
+  max-width: 735px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #FFFFFF;
+  -webkit-box-align: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
+  position: relative;
+}
+
+.form::before {
+  content: "";
+  position: absolute;
+  top: 4%;
+  left: 4%;
+  z-index: 0;
+  width: 690px;
+  height: 690px;
+  display: block;
+  border: 1px solid #CFDAE3;
+  -webkit-transform: matrix(-0.26, 0.97, -0.97, -0.26, 0, 0);
+  -ms-transform: matrix(-0.26, 0.97, -0.97, -0.26, 0, 0);
+  transform: matrix(-0.26, 0.97, -0.97, -0.26, 0, 0);
+}
+
+.form__header {
+  margin-bottom: 16px;
+}
+
+.form__text {
+  margin-bottom: 30px;
+  max-width: 420px;
+}
+
+.form__inputs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 470px;
+}
+
+.form__input {
+  z-index: 10;
+  margin-bottom: 17px;
+  padding: 15px 20px;
+  border: 1px solid #CFDAE3;
+}
+
+.form__input::-webkit-input-placeholder {
+  font-family: "Gotham Pro";
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #98A4AE;
+}
+
+.form__input::-moz-placeholder {
+  font-family: "Gotham Pro";
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #98A4AE;
+}
+
+.form__input:-ms-input-placeholder {
+  font-family: "Gotham Pro";
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #98A4AE;
+}
+
+.form__input::-ms-input-placeholder {
+  font-family: "Gotham Pro";
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #98A4AE;
+}
+
+.form__input::placeholder {
+  font-family: "Gotham Pro";
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #98A4AE;
+}
+
+.form textarea {
+  resize: none;
+  height: 100px;
+}
+
+.form__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 16px 30px;
+  background-color: #6B97BB;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.form__btn > span {
+  font-family: "Gotham Pro";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.4;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
 .footer {
