--- a/Ceramica/src/sass/style.scss
+++ b/Ceramica/src/sass/style.scss
@@ -10,4 +10,5 @@
 @import "components/projects.scss";
 @import "components/blog.scss";
 @import "components/instagram.scss";
+@import "components/feedback.scss";
 @import "components/footer.scss";
