--- a/Ceramica/public/css/style.css
+++ b/Ceramica/public/css/style.css
@@ -140,10 +140,12 @@ body {
 }
 
 .header {
+  padding: 4px 0;
   font-family: "Gotham Pro";
   font-weight: normal;
   text-transform: uppercase;
   color: #40474E;
+  position: relative;
 }
 
 .header__inner {
@@ -156,6 +158,16 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.header::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #CFDAE3;
+  bottom: -9px;
+  z-index: 10;
 }
 
 .menu__btn {
