--- a/Ceramica/src/sass/components/header.scss
+++ b/Ceramica/src/sass/components/header.scss
@@ -1,13 +1,25 @@
 .header {
+  padding: 4px 0;
   font-family: 'Gotham Pro';
   font-weight: normal;
   text-transform: uppercase;
   color: $color-text-base;
+  position: relative;
 
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  &::after{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: $form-border;
+    bottom: -9px;
+    z-index: 10;
   }
 }
 
