--- a/Ceramica/public/css/style.css
+++ b/Ceramica/public/css/style.css
@@ -476,34 +476,26 @@ body {
   max-width: 1070px;
 }
 
-.project-slider__img-big {
-  width: 1070px;
-  height: 806px;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
 .carousel-wrapper {
   margin-left: 90%;
   position: relative;
 }
 
-.swiper-slide__glass {
-  position: absolute;
-  left: 189px;
-  bottom: 212px;
-}
-
 .glass {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 119px;
   height: 119px;
   background-color: rgba(249, 249, 250, 0.2);
   cursor: none;
-}
-
-.glass__magnify {
-  margin: 27px;
-  fill: #F9F9FA;
 }
 
 .project-carousel {
