--- a/Ceramica/src/sass/components/project.scss
+++ b/Ceramica/src/sass/components/project.scss
@@ -1,11 +1,5 @@
 .project-slider {
-  max-width: 1070px;
-
-  &__img-big {
-    width: 1070px;
-    height: 806px;
-    object-fit: cover;
-  }
+  max-width: 1070px; 
 }
 
 .carousel-wrapper{
@@ -13,23 +7,15 @@
   position: relative;
 }
 
-.swiper-slide {
-  &__glass{
-    position: absolute;    
-    left: 189px;
-    bottom: 212px;
-  }  
-}
-
 .glass{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 119px;
   height: 119px;
   background-color: rgba(249, 249, 250, 0.2);
   cursor: none;
-  &__magnify{
-    margin: 27px;
-    fill: #F9F9FA;
-  }
 }
 
 .project-carousel {
