--- a/Ceramica/src/sass/components/feedback.scss
+++ b/Ceramica/src/sass/components/feedback.scss
@@ -1,13 +1,14 @@
 .feedback {
-  padding: 120px;
+  padding: 120px 0;
 
   &__wrapper {
   height: 863px;
-    background: url("../img/questions/questions_1.jpg") no-repeat;
-    background-position: 15px;
-    display: flex;
-    justify-content:end;
-    align-items: center;
+  background: url("../img/questions/questions_1.jpg") no-repeat;
+  background-position: 15px;
+  display: flex;
+  justify-content:end;
+  align-items: center;
+  // max-width: 1500px;
   }
 
   &__form {
