--- a/Ceramica/src/sass/components/underheader.scss
+++ b/Ceramica/src/sass/components/underheader.scss
@@ -50,12 +50,20 @@
     margin-bottom: 30px;
     text-transform: uppercase;
     font-weight: normal;
+
+    @media screen and (max-width:1400px) {
+      @include font(66px, 67px);
+    }
   }
 
   &__text {
     @include font(30px, 42px);
     max-width: 540px;
     color: $color-text-additional;
+
+    @media screen and (max-width:1400px) {
+      @include font(25px, 35px);
+    }
   }
 }
 
