--- a/Ceramica/src/sass/components/global.scss
+++ b/Ceramica/src/sass/components/global.scss
@@ -36,5 +36,5 @@ body{
   letter-spacing: 0.1em;
   position: relative;
   text-transform: uppercase;
-  color: $color-text-base;
+  color: $text-base;
 }
