--- a/Ceramica/src/sass/components/vars.scss
+++ b/Ceramica/src/sass/components/vars.scss
@@ -1,7 +1,7 @@
-$color-text-base: #40474E;
-$color-text-additional: #FFFFFF;
-$color-focus-red: #AA182C;
-$color-footer-background: #6A737A;
-$color-button-active: #6B97BB;
-$color-dots: #F9F9FA;
-$form-border:  #CFDAE3;
+$text-base: #40474E;
+$clear-white: #FFFFFF;
+$red-active: #AA182C;
+$gray: #6A737A;
+$blue-active: #6B97BB;
+$white: #F9F9FA;
+$light-gray:  #CFDAE3;
