--- a/Ceramica/src/sass/components/blog.scss
+++ b/Ceramica/src/sass/components/blog.scss
@@ -1,6 +1,6 @@
 .blog {
   padding: 120px 0;
-  background-color: $color-dots;
+  background-color: $white;
 
   &__cathword {
     display: flex;
@@ -23,7 +23,7 @@
 .card {
   font-family: 'Gotham Pro';
   font-weight: normal;
-  color: $color-text-base;
+  color: $text-base;
   border: 1px solid #CFDAE3;
   position: relative;
 
@@ -63,7 +63,7 @@
   }
 
   &__link {
-    color: $color-text-base;
+    color: $text-base;
     @include font(20px, 24px);
     display: -webkit-box;
     -webkit-line-clamp: 2; 
@@ -71,7 +71,7 @@
     overflow: hidden;
     margin-bottom: 15px;
     &:hover{
-      color: $color-button-active;
+      color: $blue-active;
     }
 
     // @media screen and (max-width:1400px) {
@@ -85,7 +85,7 @@
       padding-left: 24px;
       margin-right: 15px;
       display: inline-block;
-      color: $color-footer-background;
+      color: $gray;
       @include font(12px, 15.6px);
     }
     margin-bottom: 15px;
