--- a/Ceramica/src/sass/components/footer.scss
+++ b/Ceramica/src/sass/components/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $color-footer-background;
+  background-color: $gray;
 
   &__main {
     display: grid;
@@ -35,7 +35,7 @@
   grid-template-columns: 1fr 1fr 1.2fr 1fr;
   font-family: 'Gotham Pro';
   font-weight: 400;
-  color: $color-text-additional;
+  color: $clear-white;
 
   &__double{
     display: grid;
@@ -55,12 +55,12 @@
 
   &__link {
     @include font(14px, 16.8px);
-    color: $color-text-additional;
+    color: $clear-white;
     display: inline-block;
     border-bottom: 1px solid transparent;
     padding-bottom: 2px;
     &:hover{
-      border-color: $color-text-additional;
+      border-color: $clear-white;
     }
   }
 }
@@ -80,7 +80,7 @@
       font-family: 'Gotham Pro';
       font-weight: 400;
       display: inline-block;
-      color: $color-text-additional;
+      color: $clear-white;
       @include font(14px, 16.97px);
       letter-spacing: 0.05em;
       text-transform: uppercase;
@@ -89,12 +89,12 @@
   }
 
   &__btn-blue {
-    border: 1px solid $color-button-active;
-    background-color: $color-button-active;
+    border: 1px solid $blue-active;
+    background-color: $blue-active;
   }
 
   &__btn-transparent {
-    border: 1px solid $color-text-additional;
+    border: 1px solid $clear-white;
     background-color: transparent;
     padding: 18px 19px;
   }
@@ -105,7 +105,7 @@
   grid-template-columns: 1.75fr 1fr 1fr;
 
   &__copyright {
-    color: $color-text-additional;
+    color: $clear-white;
     font-family: "Gotham Pro";
     font-weight: normal;
     @include font(14px, 16.8px);
@@ -122,7 +122,7 @@
 
   &__lang {
     opacity: 0.4;
-    color: $color-text-additional;
+    color: $clear-white;
     font-family: "Gotham Pro";
     font-weight: normal;
     @include font(14px, 16.97px);
@@ -131,7 +131,7 @@
   &__divider {
     height: 10px;
     width: 1px;
-    background-color: $color-text-additional;
+    background-color: $clear-white;
     opacity: 0.4;
   }
 
@@ -145,7 +145,7 @@
 
   &__dev {
     margin-left: auto;
-    color: $color-text-additional;
+    color: $clear-white;
     font-family: 'Gilroy';
     font-weight: normal;
     @include font(12px, 16px);
