--- a/Ceramica/src/sass/components/header.scss
+++ b/Ceramica/src/sass/components/header.scss
@@ -3,7 +3,7 @@
   font-family: 'Gotham Pro';
   font-weight: normal;
   text-transform: uppercase;
-  color: $color-text-base;
+  color: $text-base;
   position: relative;
 
   &__inner {
@@ -17,7 +17,7 @@
     content: '';
     width: 100%;
     height: 1px;
-    background-color: $form-border;
+    background-color: $light-gray;
     bottom: -9px;
     z-index: 10;
   }
@@ -25,10 +25,10 @@
 
 .menu {
   &__btn {
-    border: 1px solid $color-focus-red;
+    border: 1px solid $red-active;
     background-color: transparent;
     text-transform: uppercase;
-    color: $color-text-base;
+    color: $text-base;
     padding: 11px 35px;
     @include font(14px, 16.2px);
 
@@ -56,19 +56,19 @@
   }
 
   &__link {
-    color: $color-text-base;
+    color: $text-base;
     @include font(16px, 18.51px);
 
     @media screen and (max-width: 1400px) {
         @include font(14px, 16.2px);
       }
     &:hover{
-      color: $color-focus-red;
+      color: $red-active;
     }
   }
 
   &__highlight {
-    color: $color-focus-red;
+    color: $red-active;
   }
 
   &__lang {
@@ -107,7 +107,7 @@
   }
 
   &__link {
-    color: $color-text-base;
+    color: $text-base;
   }
 }
 
@@ -122,9 +122,9 @@
 
   &__link {
     >svg{
-      fill: $color-text-base;
+      fill: $text-base;
       &:hover{
-        fill:$color-focus-red;
+        fill:$red-active;
       }
     }
   }
@@ -139,7 +139,7 @@
       left: 18px;
       width: 18px;
       height: 18px;
-      background-color: $color-focus-red;
+      background-color: $red-active;
       transform: rotate(15deg);
     }
 
@@ -148,7 +148,7 @@
     font-family: 'Gotham Pro';
     font-weight: 700;
     @include font(8px, 10.4px);
-    color: $color-text-additional;
+    color: $clear-white;
     display: block;
     top: -6px;
     left: 23px;
