--- a/Strahovanie/src/sass/components/header.scss
+++ b/Strahovanie/src/sass/components/header.scss
@@ -16,6 +16,10 @@
     background-color: $blue;
     color: $white;
     padding: 18px 40px;
+    &:hover{
+      background-color: $blue-active;
+      border-color: $blue-active;
+    }
   }
 }
 
