--- a/Strahovanie/src/sass/components/vars.scss
+++ b/Strahovanie/src/sass/components/vars.scss
@@ -1,4 +1,8 @@
 $blue-dark: #001237;
 $blue-active: #1442AE;
+$blue-pale: #F1F8FE;
 $blue: #2155CF;
+$marine: #6B82B0;
 $white: #FFFFFF;
+$gray: #D9D9D9;
+$gray-dark: #2F2F2F;
