--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -6,4 +6,5 @@
 @import "components/vars.scss";
 
 @import "components/header.scss";
+@import "components/insurance-case.scss";
 @import "components/footer.scss";
