--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -185,6 +185,86 @@ body {
   text-transform: uppercase;
 }
 
+.insurance {
+  padding: 90px 0;
+}
+
+.insurance__wrapper {
+  background-color: #072D85;
+  border-radius: 12px;
+  -webkit-filter: drop-shadow(0px 4px 46px rgba(123, 139, 181, 0.22));
+  filter: drop-shadow(0px 4px 46px rgba(123, 139, 181, 0.22));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.insurance__image {
+  background: url("../icons/Intersect.svg") no-repeat;
+  background-position: 80% 40%;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+}
+
+.insurance__content {
+  padding: 75px 0;
+}
+
+.action-plan {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  max-width: 710px;
+}
+
+.action-plan__header {
+  margin-bottom: 36px;
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  font-size: 46px;
+  line-height: 1.0869565217;
+  color: #FFFFFF;
+}
+
+.action-plan__list {
+  margin-bottom: 50px;
+}
+
+.action-plan__item {
+  padding-left: 43px;
+  background: url("../icons/shield.svg") no-repeat;
+}
+
+.action-plan__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.action-plan__text {
+  color: #FFFFFF;
+  font-family: "Proxima Nova";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1;
+}
+
+.action-plan__button {
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+  background-color: #2463F6;
+  color: #FFFFFF;
+  font-family: "Proxima Nova";
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  padding: 27px 70px;
+}
+
 .footer {
   background-color: #F1F8FE;
   padding-top: 80px;
