--- a/Ceramica/src/sass/components/fonts.scss
+++ b/Ceramica/src/sass/components/fonts.scss
@@ -3,30 +3,35 @@
   src: url('../fonts/GothamPro.woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Gotham Pro';
   src: url('../fonts/GothamPro-Medium.woff2');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Gotham Pro';
   src: url('../fonts/GothamPro-Bold.woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Gotham Pro';
   src: url('../fonts/GothamPro-Light.woff2');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Gilroy';
   src: url('../fonts/Gilroy-Regular.woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @mixin font($font-size, $line-height) {
