--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -3,6 +3,7 @@
   src: url("../fonts/ProximaNova-Bold.woff2");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("../fonts/ProximaNova-Regular.woff2");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url("../fonts/ProximaNova-Semibold.woff2");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url("../fonts/OpenSans-SemiBold.woff2");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 html {
