--- a/Strahovanie/src/sass/components/fonts.scss
+++ b/Strahovanie/src/sass/components/fonts.scss
@@ -3,24 +3,28 @@
   src: url('../fonts/ProximaNova-Bold.woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Proxima Nova';
   src: url('../fonts/ProximaNova-Regular.woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Proxima Nova';
   src: url('../fonts/ProximaNova-Semibold.woff2');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Open Sans';
   src: url('../fonts/OpenSans-SemiBold.woff2');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @mixin font($font-size, $line-height) {
