--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -8,3 +8,5 @@
 @import "components/header.scss";
 @import "components/insurance-case.scss";
 @import "components/footer.scss";
+
+@import "components/offers/greencard.scss";
