--- a/Strahovanie/src/sass/components/insurance-case.scss
+++ b/Strahovanie/src/sass/components/insurance-case.scss
@@ -19,16 +19,19 @@
   }
 }
 
+.header{
+  font-family: 'Proxima Nova';
+  font-weight: 700;
+  @include font(46px, 50px);
+}
+
 .action-plan {
   display: flex;
   flex-direction: column;
   max-width: 710px;
 
   &__header {
-    margin-bottom: 36px;
-    font-family: 'Proxima Nova';
-    font-weight: 700;
-    @include font(46px, 50px);
+    margin-bottom: 36px;    
     color: $white;
   }
 
