--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -571,3 +571,122 @@ body {
   font-weight: 600;
   color: #001237;
 }
+
+.proposals {
+  padding: 80px 0;
+  background-color: #F1F8FE;
+}
+
+.proposals__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.proposal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 44px 0;
+  margin-left: 55px;
+  margin-right: 40px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.characteristic {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.characteristic__item:not(:last-child) {
+  margin-right: 70px;
+}
+
+.characteristic__stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.characteristic__star:not(:last-child) {
+  margin-right: 4px;
+}
+
+.characteristic__name {
+  font-family: "Proxima Nova";
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.1875;
+  color: #263238;
+}
+
+.characteristic__sum {
+  font-family: "Proxima Nova";
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  color: #263238;
+}
+
+.characteristic__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: relative;
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  color: #263238;
+}
+
+.characteristic__price_old {
+  position: absolute;
+  bottom: -25px;
+  color: #263238;
+  opacity: 0.5;
+}
+
+.characteristic__price_old::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #AEAEAE;
+  -webkit-transform: rotate(-8.24deg);
+  -ms-transform: rotate(-8.24deg);
+  transform: rotate(-8.24deg);
+  bottom: 50%;
+  left: 0;
+}
+
+.characteristic__button {
+  border: none;
+  background-color: #FF9504;
+  padding: 14px 45px;
+  margin-left: 10px;
+}
+
+.characteristic__button > span {
+  color: #FFFFFF;
+  font-size: 14px;
+  line-height: 1;
+}
+
+.characteristic__button:hover {
+  background-color: #E28300;
+}
