--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -11,3 +11,4 @@
 
 @import "components/offers/greencard.scss";
 @import "components/offers/offers.scss";
+@import "components/offers/proposal.scss";
