--- a/Strahovanie/src/sass/components/insurance-case.scss
+++ b/Strahovanie/src/sass/components/insurance-case.scss
@@ -64,5 +64,8 @@
     letter-spacing: 0.08em;
     text-transform: uppercase;
     padding: 27px 70px;
+    &:hover{
+      background-color: $blue-active;
+    }
   }
 }
