--- a/Strahovanie/src/sass/components/offers/proposal.scss
+++ b/Strahovanie/src/sass/components/offers/proposal.scss
@@ -2,7 +2,9 @@
   padding: 80px 0;
   background-color: $blue-pale;
 
-  //   &__list {}
+    &__wrapper {
+      box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+    }
 
     &__item:not(:last-child) {
       margin-bottom: 30px;
