--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -12,3 +12,5 @@
 @import "components/offers/greencard.scss";
 @import "components/offers/offers.scss";
 @import "components/offers/proposal.scss";
+
+@import "components/contacts/callback.scss";
