--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -14,3 +14,5 @@
 @import "components/offers/proposal.scss";
 
 @import "components/contacts/callback.scss";
+
+@import "components/about/about-us.scss";
