--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -834,3 +834,41 @@ body {
   left: 0;
   top: 45%;
 }
+
+.about {
+  padding-top: 80px;
+}
+
+.about__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.about__content {
+  max-width: 750px;
+}
+
+.about__img {
+  border-radius: 12px;
+}
+
+.introduction__header {
+  color: #001237;
+  margin-bottom: 24px;
+}
+
+.introduction__text {
+  font-family: "Proxima Nova";
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #001237;
+  opacity: 0.8;
+}
