--- a/Strahovanie/src/sass/style.scss
+++ b/Strahovanie/src/sass/style.scss
@@ -16,3 +16,4 @@
 @import "components/contacts/callback.scss";
 
 @import "components/about/about-us.scss";
+@import "components/about/insurance-types.scss";
