--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -409,6 +409,187 @@ body {
   fill: #6B82B0;
 }
 
+.swiper-pagination-progressbar {
+  position: absolute;
+  max-width: 780px;
+  background-color: #C0C2C3;
+}
+
+.swiper-horizontal > .swiper-pagination-progressbar,
+.swiper-pagination-progressbar.swiper-pagination-horizontal {
+  height: 1px;
+  left: 23.5%;
+  top: 25%;
+}
+
+:root {
+  --swiper-theme-color: #4268B2;
+}
+
+.arrange {
+  background-color: #F8FBFE;
+  padding: 90px 0 100px 0;
+  position: relative;
+}
+
+.arrange__header {
+  text-align: center;
+  color: #001237;
+  margin-bottom: 75px;
+}
+
+.swiper__nav {
+  position: relative;
+}
+
+.switch {
+  margin-bottom: 50px;
+}
+
+.switch__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+  max-width: 1010px;
+  margin: 0 auto;
+}
+
+.switch__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.switch__item_active > span.switch__index {
+  background-color: #4268B2;
+}
+
+.switch__item_active > span.switch__index::after {
+  background-color: rgba(66, 104, 178, 0.15);
+}
+
+.switch__item_active > span.switch__index:hover {
+  background-color: #4268B2;
+  color: #F6F6F6;
+}
+
+.switch__item_active > span.switch__description {
+  color: #263238;
+}
+
+.switch__index {
+  font-family: "Open Sans";
+  font-weight: 600;
+  letter-spacing: 0.02em;
+  color: #F6F6F6;
+  font-size: 24px;
+  line-height: 1.5;
+  background-color: #C0C2C3;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: relative;
+  z-index: 10;
+  margin-bottom: 22px;
+}
+
+.switch__index::after {
+  content: "";
+  position: absolute;
+  width: 56px;
+  height: 56px;
+  background-color: rgba(192, 194, 195, 0.15);
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.switch__index:hover {
+  background-color: #FFFFFF;
+  color: #2155CF;
+  cursor: pointer;
+}
+
+.switch__description {
+  color: #9E9E9E;
+  font-family: "Proxima Nova";
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.625;
+}
+
+.step {
+  padding: 40px 65px 40px 90px;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+  box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+  margin: 0 auto;
+  max-width: 1050px;
+  background: url("../icons/Intersect_opacity.svg") no-repeat;
+  background-position: 2% 90%;
+}
+
+.step__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.step__image {
+  border-right: 1px dashed #D9D9D9;
+}
+
+.step__content {
+  max-width: 570px;
+}
+
+.step__header {
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1.3;
+  color: #001237;
+  margin-bottom: 15px;
+}
+
+.step__text {
+  color: #000;
+  font-family: "Proxima Nova";
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.6875;
+  opacity: 0.8;
+}
+
 .greencard {
   background-color: #F1F8FE;
   padding: 60px 0;
